Updated with animation/sounds/formatting