@@ -3,15 +3,16 @@ package com.minecraftcivilizations.specialization.Listener.Player;
 import com.minecraftcivilizations.specialization.Config.SpecializationConfig;
 import com.minecraftcivilizations.specialization.Specialization;
 import net.kyori.adventure.text.minimessage.MiniMessage;
-import org.bukkit.Bukkit;
-import org.bukkit.Color;
+import org.bukkit.*;
 import org.bukkit.entity.Display;
 import org.bukkit.entity.Player;
 import org.bukkit.entity.TextDisplay;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.entity.PlayerDeathEvent;
 import org.bukkit.event.player.*;
+import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.bukkit.util.Transformation;
 import org.joml.AxisAngle4f;
@@ -19,8 +20,15 @@ import org.joml.Vector3f;
 
 import java.util.*;
 
+/**
+ * LocalChat - chat bubble system with smooth movement, bobbing and pop sound.
+ */
 public class LocalChat implements Listener {
-
+    //max characters in a bubble msg
+    private static final int maxChars = 155;
+    //typing animation grouping
+    private static final int charsPerTick = 3; // more chars = more performant at scale
+    private static final long animationTickSpeed = 1L;
     // Base height above head
     private static final float BASE_HEIGHT = 0.6f;
 
@@ -29,35 +37,75 @@ public class LocalChat implements Listener {
 
     // Additional spacing per line when message is multi-line
     private static final float MULTILINE_SPACING = 0.30f;
-    //Color for ( ) around msgs
-    private static final String PAREN_COLOR = "<#555555>"; // dark grey
-    // Chat bubble text color
-    private static final String CHAT_BUBBLE_COLOR = "<#f5f2c8>"; // change inline here
 
+    // Color wrap strings used with MiniMessage
+    private static final String QOUTE_COLOR = "<#b7a96f>"; // slightly darker yellow than chat bubble
+    private static final String CHAT_BUBBLE_COLOR = "<#f5f2c8>"; // main chat text
+
+    // thresholds
     private static final int MAX_BUBBLES = 3;
     private static final long LIFETIME_TICKS = 20L * 10;
-    private static final int ANIMATION_DELAY = 1;
+
+    // LERP / bobbing settings
+    private static final float LERP_RATE = 0.26f;        // how quickly current Y approaches target Y
+    private static final float NEW_BUBBLE_OFFSET = -0.32f; // start a bit lower and rise in
+    private static final float BOB_AMPLITUDE = 0.02f;   // bob amplitude
+    private static final double BOB_PERIOD_MS = 3000.0; // one bob period in ms
+
+    // pop sound radius
+    private static final double POP_SOUND_RADIUS = 10.0;
+    private static final boolean POP_SOUND_ENABLED = true;
+    private static final boolean POP_PLAY_FOR_SENDER = true;
+    private static final float POP_VOLUME = 0.6f;
+    private static final float POP_PITCH_VARIANCE = 0.2f;
 
     private final Map<UUID, List<TextDisplay>> activeBubbles = new HashMap<>();
     private final Map<UUID, TextDisplay> activeNames = new HashMap<>();
+    // track original (non-bobbing) target Y for each bubble so stacking adjustments are stable
+    private final Map<TextDisplay, Float> targetY = new HashMap<>();
+    // track current Y used by animation loop (keeps persisted state across ticks)
+    private final Map<TextDisplay, Float> currentY = new HashMap<>();
+    // store messages for char-based thresholds
     private final Map<TextDisplay, String> bubbleMessages = new HashMap<>();
+
+    private boolean animatorRunning = false;
 
     @EventHandler(priority = EventPriority.HIGHEST)
     public void onPlayerChat(AsyncPlayerChatEvent event) {
-        event.setCancelled(true);
-
         Player sender = event.getPlayer();
         String message = MiniMessage.miniMessage().stripTags(event.getMessage().trim());
-        if (tryHandleGlobalChat(sender, message)) return;
 
+        // Handle announcements first
+        if (tryHandleGlobalChat(sender, message)) {
+            event.setCancelled(true); // announcements shouldn't appear in normal chat
+            return;
+        }
+
+        // Always show the bubble
+        Bukkit.getScheduler().runTask(Specialization.getInstance(), () -> showChatBubble(sender, message));
+
+        // Cancel vanilla chat only if the sender is spectator or invisible
+        if (sender.getGameMode() == GameMode.SPECTATOR || sender.hasPotionEffect(PotionEffectType.INVISIBILITY)) {
+            event.setCancelled(true);
+            return;
+        }
+
+        // Vanilla chat: send only to nearby players and the sender
+        event.setCancelled(true); // cancel default broadcast
         String format = SpecializationConfig.getChatConfig().get("DEFAULT_FORMAT", String.class);
         Bukkit.getScheduler().runTask(Specialization.getInstance(), () -> {
             for (Player near : getNearbyPlayers(sender))
                 near.sendRichMessage(format.formatted(sender.getName(), message));
             sender.sendRichMessage(format.formatted(sender.getName(), message));
-            showChatBubble(sender, message);
         });
     }
+
+    @EventHandler
+    public void onPlayerDeath(PlayerDeathEvent event) {
+        Player player = event.getEntity();
+        removeAllBubbles(player);
+    }
+
 
     private void showChatBubble(Player player, String message) {
         message = truncateMessage(message);
@@ -80,52 +128,100 @@ public class LocalChat implements Listener {
 
         // --- Immediate deletion thresholds ---
         if (totalChars > 250) { // huge total, remove all except newest
-            for (TextDisplay td : bubbles) removeBubble(td, player, true);
+            for (TextDisplay td : new ArrayList<>(bubbles)) {
+                removeBubble(td, player, true);
+            }
             bubbles.clear();
-        } else if (totalChars > 150) { // remove only oldest
+        } else if (totalChars > maxChars) { // remove only oldest
             if (!bubbles.isEmpty()) {
-                TextDisplay oldest = bubbles.remove(0);
+                TextDisplay oldest = bubbles.removeFirst();
                 removeBubble(oldest, player, true);
             }
         }
 
         // --- Enforce MAX_BUBBLES ---
         while (bubbles.size() >= MAX_BUBBLES) {
-            TextDisplay oldest = bubbles.remove(0);
+            TextDisplay oldest = bubbles.removeFirst();
             removeBubble(oldest, player, true);
         }
 
-        // --- Shift remaining bubbles upward ---
+        // --- Shift remaining bubbles upward by increasing their targetY by bubbleHeight ---
         for (TextDisplay td : bubbles) {
             if (td.isDead()) continue;
-            Transformation t = td.getTransformation();
-            Vector3f pos = new Vector3f(t.getTranslation());
-            pos.y += bubbleHeight;
-            t.getTranslation().set(pos);
-            td.setTransformation(t);
+            float prevTarget = targetY.getOrDefault(td, BASE_HEIGHT);
+            float newTarget = prevTarget + bubbleHeight;
+            targetY.put(td, newTarget);
         }
 
-        // --- Spawn new bubble ---
-        TextDisplay td = spawnBubble(player, BASE_HEIGHT);
-        bubbleMessages.put(td, message); // track text
+        // --- Spawn new bubble slightly behind player ---
+        TextDisplay td = player.getWorld().spawn(
+                player.getLocation().clone().add(0, BASE_HEIGHT + NEW_BUBBLE_OFFSET, 0),
+                TextDisplay.class,
+                spawned -> {
+                    // Start with empty text but colored properly (apply color markup later in animateText)
+                    spawned.text(MiniMessage.miniMessage().deserialize(CHAT_BUBBLE_COLOR + ""));
+
+                    // Settings
+                    spawned.setBillboard(Display.Billboard.CENTER);
+                    spawned.setShadowed(true);
+                    spawned.setSeeThrough(false);
+                    spawned.setViewRange(32f);
+                    spawned.setPersistent(false);
+                    spawned.setInterpolationDuration(0);
+                    spawned.setBrightness(new Display.Brightness(10, 10));
+
+                    Vector3f translation = new Vector3f(0, 0, (float) 0.2); // start at 0 because Y offset applied via spawn
+                    Vector3f scale = new Vector3f(1, 1, 1);
+                    AxisAngle4f rotation = new AxisAngle4f(0, 0, 1, 0);
+                    spawned.setTransformation(new Transformation(translation, rotation, scale, rotation));
+                }
+        );
+
+        currentY.put(td, BASE_HEIGHT + NEW_BUBBLE_OFFSET);
+        targetY.put(td, BASE_HEIGHT);
+        bubbleMessages.put(td, message);
         animateText(td, message);
+
         player.addPassenger(td);
         bubbles.add(td);
 
+        // play bubble pop sound to nearby players
+        playPopSound(player, player.getLocation());
+
+        // start animator if not running
+        startAnimatorIfNeeded();
+
         // --- Schedule fade-out normally ---
         Bukkit.getScheduler().runTaskLater(Specialization.getInstance(), () -> {
-            bubbles.remove(td);
+            List<TextDisplay> list = activeBubbles.get(uuid);
+            if (list != null) list.remove(td);
             bubbleMessages.remove(td);
+            targetY.remove(td);
+            currentY.remove(td);
             removeBubble(td, player, false);
         }, LIFETIME_TICKS);
     }
 
 
 
+    private void playPopSound(Player sender, org.bukkit.Location location) {
+        if (!POP_SOUND_ENABLED) return;
+
+        double r2 = POP_SOUND_RADIUS * POP_SOUND_RADIUS;
+        for (Player p : Bukkit.getOnlinePlayers()) {
+            if (!p.getWorld().equals(location.getWorld())) continue;
+            if (!POP_PLAY_FOR_SENDER && p.equals(sender)) continue; // skip sender if disabled
+            if (p.getLocation().distanceSquared(location) > r2) continue;
+
+            float pitch = 0.9f - (POP_PITCH_VARIANCE / 2f) + (float) (Math.random() * POP_PITCH_VARIANCE);
+            p.playSound(location, Sound.ENTITY_PUFFER_FISH_BLOW_UP, SoundCategory.UI, POP_VOLUME, pitch);
+        }
+    }
+
     /** --- Fade + cleanup --- **/
 
     private void removeBubble(TextDisplay td, Player player, boolean forceImmediate) {
-        bubbleMessages.remove(td); // remove from tracking
+        bubbleMessages.remove(td); // stop tracking message
 
         if (td.isDead()) {
             checkRemoveNameplate(player);
@@ -133,11 +229,15 @@ public class LocalChat implements Listener {
         }
 
         if (forceImmediate) {
+            // remove instantly
+            targetY.remove(td);
+            currentY.remove(td);
             td.remove();
             Bukkit.getScheduler().runTaskLater(Specialization.getInstance(), () -> checkRemoveNameplate(player), 1L);
             return;
         }
 
+        // fade out normally
         new BukkitRunnable() {
             float opacity = 1f;
 
@@ -151,6 +251,9 @@ public class LocalChat implements Listener {
                 opacity -= 0.1f;
                 td.setTextOpacity((byte) (opacity * 255));
                 if (opacity <= 0) {
+                    // ensure removed and cleanup maps
+                    targetY.remove(td);
+                    currentY.remove(td);
                     td.remove();
                     cancel();
                     Bukkit.getScheduler().runTaskLater(Specialization.getInstance(), () -> checkRemoveNameplate(player), 1L);
@@ -168,10 +271,15 @@ public class LocalChat implements Listener {
 
     /** --- Nameplate --- **/
     private void spawnNameplate(Player sender) {
+        if (sender.getGameMode() == GameMode.SPECTATOR || sender.hasPotionEffect(PotionEffectType.INVISIBILITY)) {
+            return;
+        }
+
         UUID uuid = sender.getUniqueId();
         TextDisplay nameplate = sender.getWorld().spawn(sender.getLocation(), TextDisplay.class, td -> {
             td.text(MiniMessage.miniMessage().deserialize(sender.getName()));
             td.setBillboard(Display.Billboard.CENTER);
+            td.setDefaultBackground(false);
             td.setShadowed(false);
             td.setSeeThrough(false);
             td.setViewRange(32f);
@@ -179,7 +287,7 @@ public class LocalChat implements Listener {
             td.setInterpolationDuration(0);
             td.setBrightness(new Display.Brightness(14, 14));
 
-            Vector3f translation = new Vector3f(0, 0.27f, 0);
+            Vector3f translation = new Vector3f(0, 0.27f, (float) 0.3);
             Vector3f scale = new Vector3f(1, 1, 1);
             AxisAngle4f rotation = new AxisAngle4f(0, 0, 1, 0);
             td.setTransformation(new Transformation(translation, rotation, scale, rotation));
@@ -187,7 +295,7 @@ public class LocalChat implements Listener {
 
         activeNames.put(uuid, nameplate);
         sender.addPassenger(nameplate);
-        //so the player doesn't see their own nameplate
+        // hide nameplate from sender so they don't see own username (redundant).
         sender.hideEntity(Specialization.getInstance(), nameplate);
     }
 
@@ -197,57 +305,99 @@ public class LocalChat implements Listener {
         if (nameplate != null && !nameplate.isDead()) nameplate.remove();
     }
 
-    /** --- Text display creation --- **/
-    private TextDisplay spawnBubble(Player player, float yOffset) {
-        return player.getWorld().spawn(player.getLocation(), TextDisplay.class, td -> {
-            // Start with empty text but colored properly
-            td.text(MiniMessage.miniMessage().deserialize(CHAT_BUBBLE_COLOR + ""));
-
-            // Dark background
-            //td.setDefaultBackground(false);
-            //td.setBackgroundColor(Color.fromRGB(20, 20, 20)); // dark gray
-
-            td.setBillboard(Display.Billboard.CENTER);
-            td.setShadowed(true);
-            td.setSeeThrough(false);
-            td.setViewRange(32f);
-            td.setPersistent(false);
-            td.setInterpolationDuration(1);
-            td.setBrightness(new Display.Brightness(10, 10));
-
-            Vector3f translation = new Vector3f(0, yOffset, 0);
-            Vector3f scale = new Vector3f(1, 1, 1);
-            AxisAngle4f rotation = new AxisAngle4f(0, 0, 1, 0);
-            td.setTransformation(new Transformation(translation, rotation, scale, rotation));
-        });
-    }
-
-
     /** --- Typing animation --- **/
     private void animateText(TextDisplay td, String message) {
-        Bukkit.getScheduler().runTaskAsynchronously(Specialization.getInstance(), () -> {
-            StringBuilder builder = new StringBuilder();
-            for (char c : message.toCharArray()) {
-                builder.append(c);
-                String partial = PAREN_COLOR + "(" + CHAT_BUBBLE_COLOR + builder + PAREN_COLOR + ")";
-                Bukkit.getScheduler().runTask(Specialization.getInstance(), () -> {
-                    if (!td.isDead()) td.text(MiniMessage.miniMessage().deserialize(partial));
-                });
-                try { Thread.sleep(ANIMATION_DELAY * 10L); } catch (InterruptedException ignored) {}
+        final char[] chars = message.toCharArray();
+        final StringBuilder builder = new StringBuilder();
+
+        new BukkitRunnable() {
+            int index = 0;
+            @Override
+            public void run() {
+                if (td.isDead() || index >= chars.length) {
+                    cancel();
+                    return;
+                }
+
+                // Append multiple chars per tick for speed
+                for (int i = 0; i < charsPerTick && index < chars.length; i++, index++) {
+                    builder.append(chars[index]);
+                }
+
+                String partial = QOUTE_COLOR + "“" + CHAT_BUBBLE_COLOR + builder + QOUTE_COLOR + "”";
+                td.text(MiniMessage.miniMessage().deserialize(partial));
             }
-        });
+        }.runTaskTimer(Specialization.getInstance(), 0L, animationTickSpeed); // 1 tick interval
     }
 
+
+    /** --- Animator task (lerp + bob) --- **/
+    private void startAnimatorIfNeeded() {
+        if (animatorRunning) return;
+        animatorRunning = true;
+
+        BukkitRunnable animatorTask = new BukkitRunnable() {
+            @Override
+            public void run() {
+                long now = System.currentTimeMillis();
+                double bobPhase = (now % (long) BOB_PERIOD_MS) / BOB_PERIOD_MS * Math.PI * 2.0;
+                float bobOffset = (float) (Math.sin(bobPhase) * BOB_AMPLITUDE);
+
+                // iterate through all active bubbles across players
+                for (Map.Entry<UUID, List<TextDisplay>> entry : activeBubbles.entrySet()) {
+                    List<TextDisplay> list = entry.getValue();
+                    if (list == null || list.isEmpty()) continue;
+
+                    // For each bubble, lerp currentY toward targetY and apply bob
+                    for (TextDisplay td : new ArrayList<>(list)) {
+                        if (td == null || td.isDead()) {
+                            // cleanup
+                            targetY.remove(td);
+                            currentY.remove(td);
+                            bubbleMessages.remove(td);
+                            continue;
+                        }
+
+                        float tgt = targetY.getOrDefault(td, BASE_HEIGHT);
+                        float cur = currentY.getOrDefault(td, tgt);
+                        // lerp towards target
+                        float next = cur + (tgt - cur) * LERP_RATE;
+                        currentY.put(td, next);
+
+                        // apply bob on top of next
+                        float displayY = next + bobOffset;
+
+                        // update transformation (only change translation Y)
+                        Transformation t = td.getTransformation();
+                        Vector3f translation = new Vector3f(t.getTranslation());
+                        translation.y = displayY;
+                        t.getTranslation().set(translation);
+                        td.setTransformation(t);
+                    }
+                }
+
+                // stop animator if nothing left to animate
+                boolean anyAlive = activeBubbles.values().stream().anyMatch(list ->
+                        list.stream().anyMatch(td -> td != null && !td.isDead()));
+                if (!anyAlive) {
+                    // cancel animator
+                    animatorRunning = false;
+                    this.cancel();
+                }
+            }
+        };
+        animatorTask.runTaskTimer(Specialization.getInstance(), 0L, 1L);
+    }
 
     /** --- Helpers --- **/
     private int getLineCount(String message) {
         int explicit = message.split("\n", -1).length;
-        int approx = (int) Math.ceil(message.length() / 40.0);
+        int approx = (int) Math.ceil(message.length() / 35.0);
         return Math.max(explicit, approx);
     }
 
     private String truncateMessage(String message) {
-        int maxChars = 135;
+
         if (message.length() <= maxChars) return message;
         return message.substring(0, maxChars - 3) + "...";
     }
